2012f/test/error/ArrayAssign.c1
void main() {
	int a[10], b;
	int i;

	i=0;
	while (i<10) {
		a[i]=i+1;
		i=i+1;
	}
	b = a;
	return;
}